--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -21,6 +21,7 @@ $secondary-color: #444444 !default;
 $dark: #2C3E50;
 $primary-color-darken: #ff9c08;
 $gray: #f1f1f1;
+$lighten: #E3E4E6;
 
 $yellow: #F8DC3D;
 $mug:  #2E2E2C;
